# Reaper

./: .gitignore  README.md  ascii.txt  pyproject.toml
examples/: default_config.json
reaper_ticker/: __init__.py  __main__.py  cli.py  config.py  feeds.py  models.py  state.py  tui.py
tests/: test_cli.py  test_config.py  test_feeds.py  test_state.py  test_tui.py
