[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reaper-ticker"
version = "0.1.0"
description = "Terminal RSS/Atom live ticker with a curses-based scrolling feed."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ajbeaver" }
]
keywords = ["rss", "atom", "cli", "tui", "curses", "news"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
  "Topic :: Utilities"
]

[project.scripts]
reaper-ticker = "reaper_ticker.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
reaper_ticker = ["ascii.txt"]
